minor updates to hel with file io, fix incorrect activity declaration in questionnaire intent, and declare questionnaire activity in manifests

--- a/19190859_FYP/app/src/main/AndroidManifest.xml
+++ b/19190859_FYP/app/src/main/AndroidManifest.xml
@@ -50,6 +50,11 @@
             android:name=".gameOverActivity"
             android:label="Game Over"
             android:theme="@style/Theme.19190859_FYP.NoActionBar"></activity>
+        <activity
+            android:name=".QuestionnaireActivity"
+            android:label="Game Over"
+            android:theme="@style/Theme.19190859_FYP.NoActionBar"
+            ></activity>
     </application>
 
 </manifest>
